--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,5 +46,9 @@ archive: true
     </ul>
 {% endif %}
 
+<!-- Include mathjax support -->
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 
 
