--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer id="footer">
     <p class="small">© Copyright {{ site.time | date: '%Y' }} {{ site.author }}</p>
 </footer>
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
